change in meta tag and emoji in about us

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="This is a offical Webiste of Beauty Lounge by Sisters.
+  <meta name="description" content="This is a offical Website of Beauty Lounge by Sisters.
   We Provide a Best Beautician and Wedding Service in The Town.
   You Must Visit Us For Best Skincare and Beauty Services">
    <meta name="robot" content="index, follow">
@@ -159,8 +159,8 @@
   <div class="cont" id="About Us">
     <div class="had1">
       <h2>Shanzae</h2>
-      <p>``Not More Than You Gorgeous AFFF Sisters &#10084&#10084 I love Your Work So Much.
-        You Are Seriously An Underrated Artists In Our City.More Power To You &#10084``</p>
+      <p>``Not More Than You Gorgeous AFFF Sisters &#9829;&#9829; I love Your Work So Much.
+        You Are Seriously An Underrated Artists In Our City.More Power To You &#9829;``</p>
     </div>
 
     <div class="had1">
@@ -173,13 +173,13 @@
       <h2>Hirah</h2>
       <p>``Girls, You Did An Amazing Job. You Captured Exactly The Natural
         But Elegant Style I Wanted, Just By Taking The Time To Get To
-        Know ME. I Absolutely Loved My Makeup Done By You. Thank You So Much. &#10084 &#10084 ``
+        Know ME. I Absolutely Loved My Makeup Done By You. Thank You So Much. &#9829;&#9829; ``
       </p>
     </div>
     <div class="had1">
       <h2>Asima</h2>
-      <p>``Thank You So Much Dear&#9829. I Am Very Thankful To You That To You That You Make Me Much Prettier. I Am Much
-        Impressed By Your Work. You Really Make Me Feel Special On My Big Day. Keep It Up Dear.&#10084 ``</p>
+      <p>``Thank You So Much Dear&#9829;. I Am Very Thankful To You That To You That You Make Me Much Prettier. I Am Much
+        Impressed By Your Work. You Really Make Me Feel Special On My Big Day. Keep It Up Dear.&#9829; ``</p>
     </div>
   </div>
 
