--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
   <nav class="navbar navbar-expand-lg fixed-top  navbar-dark bg-dark">
-    <a class="navbar-brand" href="index3.html" style="font-family: 'Dancing Script', cursive;">Beauty Lounge by
+    <a class="navbar-brand" href="index.html" style="font-family: 'Dancing Script', cursive;">Beauty Lounge by
       Sisters</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
