Correct spelling of official in meta tag

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="This is a offical Website of Beauty Lounge by Sisters.
+  <meta name="description" content="This is a official Website of Beauty Lounge by Sisters.
   We Provide a Best Beautician and Wedding Service in The Town.
   You Must Visit Us For Best Skincare and Beauty Services">
    <meta name="robot" content="index, follow">
